feat: complete backend implementation - all phases
Phase 1: Infrastructure
- UserPO aligned with sys_user schema, UserRepositoryImpl fixed
- Admin infrastructure: PO/Mapper/RepositoryImpl
- Company/CompanyStaff: PO/Mapper/RepositoryImpl
- PersonInfo/Resume/ParseTask: PO aligned with schema
- SkillTag/JobSkill: PO/Mapper/RepositoryImpl
- Notification: PO/Mapper/RepositoryImpl
- MatchRecord: PO aligned, RepositoryImpl fixed

Phase 2: Controller layer
- PersonController: all 11 interfaces implemented
- ResumeController: getDetail/getList fixed
- AuthAppService: sendVerifyCode, validateToken, logout, refreshToken
- CompanyController: staff creation with OWNER auth
- JobController: complete CRUD with authorization

Phase 3: Business flows
- Resume parse flow: MQ consumer, Tika, DeepSeek, notification
- Job parse flow: MQ consumer, skill extraction
- Bidirectional matching: DeepSeek scoring, notifications
- Resume viewed notification: type=5 with dedup
- Graph construction: Memgraph integration

Bug fixes:
- JobPublishedEvent extends BaseAggregateRoot.DomainEvent
- SkillTagDomainService: @DomainService -> @Service
- MatchRecordRepositoryImpl: import MatchRecordMapper
- LoggingAspect: wrong package
- ParseAppService: removed setRawText/markSuccess(args)
- ResumeDomainService: removed canRetry call
- Multiple IOException declarations added

Tests: Repository layer tests with Mockito